--- a/math/latex_macros_calibrating_LSMs.tex
+++ b/math/latex_macros_calibrating_LSMs.tex
@@ -45,11 +45,24 @@
 %
 % Very Simple Ecosystem Model (VSEM)
 %
-\newcommand{\stateV}{\indexState[\textrm{v}]{\state}}
-\newcommand{\stateR}{\indexState[\textrm{r}]{\state}}
-\newcommand{\stateS}{\indexState[\textrm{s}]{\state}}
+\newcommand{\stateV}{\state_{\textrm{v}}}
+\newcommand{\stateR}{\state_{\textrm{r}}}
+\newcommand{\stateS}{\state_{\textrm{s}}}
+\newcommand{\dstateV}{\dot{\state}_{\textrm{v}}}
+\newcommand{\dstateR}{\dot{\state}_{\textrm{r}}}
+\newcommand{\dstateS}{\dot{\state}_{\textrm{s}}}
 \newcommand{\NPP}{\textrm{NPP}}
 \newcommand{\GPP}{\textrm{GPP}}
+\newcommand{\alphaV}{\alpha_{\textrm{v}}}
+\newcommand{\tauV}{\tau_{\textrm{v}}}
+\newcommand{\tauR}{\tau_{\textrm{r}}}
+\newcommand{\tauS}{\tau_{\textrm{s}}}
+\newcommand{\LUE}{\ell}
+\newcommand{\LAR}{r}
+\newcommand{\KEXT}{\kappa}
+\newcommand{\fracRespiration}{\gamma}
+\newcommand{\LAI}{\textrm{LAI}}
+
 
 % --------------------------------------------------------------------------------------------------
 % Inverse problems: general setup 
